<resources>
    <string name="app_name">GiveMeYourPaw</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--  Settings Fragment-->
    <string name="settings_default_username">Yura Borisov</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_default_number">+79133773128</string>
    <string name="settings_label_phone_number">Нажмите, чтобы изменить телефон</string>
    <string name="settings_default_city">Улан-Удэ</string>
    <string name="settings_label_default_city">Нажмите, чтобы изментить город</string>
    <string name="settings_default_bio">О себе</string>
    <string name="settings_label_default_bio">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="cd_register_image">register_image</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_send_SMS">Мы отправили SMS с кодом проверки на ваш телефон</string>
    <string name="register_title_toolbar">Ваш телефон</string>
    <string name="register_label_title">Введите свой номер, на него будет выслан код</string>
    <string name="name_app">Дай лапу</string>
    <string name="register_error_enter_phone_number">Введите номер телефона</string>
    <string name="register_title_enter_phone_number">Ваш телефон</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
    <string name="register_title_settings_name">Изменение имени</string>
    <string name="settings_toast_name_isEmpty">Имя не может быть пустым</string>
    <string name="data_update">Данные обновлены</string>
    <string name="settings_title">Настройки</string>
    <string name="settings_input_bio">Например, как любите животных</string>
    <string name="settings_city_ulan_ude">Улан-Удэ</string>
    <string name="settings_city_gusinoozersk">Гусиноозерск</string>
</resources>